# f2m

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cellselect.rs  f2m.rs  filter.rs  m.rs  main.rs
