[package]
name = "fragtk"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
flate2 = { version = "1.0.30", features = ["zlib-ng"], default-features = false }
gzp = "0.11.3"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rust-lapper = "1.1.0"
rustc-hash = "2.0.0"
tikv-jemallocator = "0.5"

[profile.release]
panic = "abort"

[[bin]]
name = "fragtk"
path = "src/main.rs"